--- a/frontend/src/quasar-variables.sass
+++ b/frontend/src/quasar-variables.sass
@@ -1,10 +1,13 @@
-$primary   : #1976D2
-$secondary : #26A69A
-$accent    : #9C27B0
+// src/css/quasar.variables.sass
 
-$dark      : #1D1D1D
+$primary    : #d20a0a
+$secondary  : #000
+$tertiary   : #d5d6d8
+$accent     : #16559f
 
-$positive  : #21BA45
-$negative  : #C10015
-$info      : #31CCEC
-$warning   : #F2C037
+$dark       : #1d1d1d
+
+$positive   : #21BA45
+$negative   : #C10015
+$info       : #31CCEC
+$warning    : #F2C037
