--- a/frontend/src/styles/vuetify/variables.scss
+++ b/frontend/src/styles/vuetify/variables.scss
@@ -1,11 +1,7 @@
-// @use must always stay first
-@use 'vuetify/styles' with (
-  // Place SASS variable overrides here
 
-  // Don't remove this variables
-  $color-pack: false,
-  $utilities: false,
-);
+@forward 'vuetify/styles/main.sass';
+@use 'vuetify/styles';
+
 
 // For import google font families
-//@import url('https://fonts.googleapis.com/css? family=Oxygen:300,400,700&display=swap');
+@import url('https://fonts.googleapis.com/css? family=Oxygen:300,400,700&display=swap');
