--- a/frontend/src/styles/themes/colors.css
+++ b/frontend/src/styles/themes/colors.css
@@ -22,6 +22,7 @@
 :root {
     /* Brand */
     --primary-color:#6C0808;
+    --primary-color:#202324;
     --primary-light-color:#a03c30;
     --primary-dark-color:#3f0000;
     --secondary-color:#000;
